// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducer should handle AUTH_REQUEST 1`] = `
Object {
  "country": undefined,
  "data": Object {
    "user": null,
  },
  "error": undefined,
  "status": "SENDING",
  "token": undefined,
}
`;

exports[`auth reducer should handle AUTH_REQUEST_SUCCESS 1`] = `
Object {
  "country": undefined,
  "data": Object {
    "user": null,
  },
  "error": undefined,
  "status": "SENDING",
  "token": undefined,
}
`;

exports[`auth reducer should handle AUTH_SIGN_UP 1`] = `
Object {
  "country": undefined,
  "data": Object {
    "user": null,
  },
  "token": undefined,
}
`;

exports[`auth reducer should handle AUTH_SIGN_UP_ERROR 1`] = `
Object {
  "country": undefined,
  "data": Object {
    "user": null,
  },
  "token": undefined,
}
`;

exports[`auth reducer should handle AUTH_SIGN_UP_SUCCESS 1`] = `
Object {
  "country": undefined,
  "data": Object {
    "user": null,
  },
  "token": undefined,
}
`;
